# Charm

./: .gitignore  .krazy  BUILD  CMakeLists.txt  _clang-format  charm.categories  conanfile.py
AutoTests/: BackendIntegrationTests.cpp  BackendIntegrationTests.h  CMakeLists.txt  CharmDataModelTests.cpp  CharmDataModelTests.h  ControllerTests.cpp  ControllerTests.h  DatesTests.cpp  DatesTests.h  EventModelFilterTests.cpp  EventModelFilterTests.h  EventModelTests.cpp  EventModelTests.h  SmartNameCacheTests.cpp  SqLiteStorageTests.cpp  SqLiteStorageTests.h  SqlStorageTests.cpp  SqlTransactionTests.cpp  SqlTransactionTests.h  TaskModelTests.cpp  TaskStructureTests.cpp  TaskStructureTests.h  TestApplication.cpp  TestApplication.h  TestHelpers.h  TimeSpanTests.cpp  TimeSpanTests.h  UpdateCheckerTests.cpp  UpdateCheckerTests.h  XmlSerializationTests.cpp  XmlSerializationTests.h
Charm/: ApplicationCore.cpp  ApplicationCore.h  CMakeLists.txt  Charm.cpp  Data.cpp  Data.h  EventModelAdapter.cpp  EventModelAdapter.h  EventModelFilter.cpp  EventModelFilter.h  GUIState.cpp  GUIState.h  MacApplicationCore.h  MacApplicationCore.mm  ModelConnector.cpp  ModelConnector.h  TaskFilterProxyModel.cpp  TaskFilterProxyModel.h  TaskModelAdapter.cpp  TemporaryValue.h  ViewFilter.cpp  ViewFilter.h  ViewHelpers.cpp  ViewHelpers.h  WeeklySummary.cpp  WeeklySummary.h
Charm/CMake/Modules/: FindXCB.cmake
Charm/Commands/: CommandDeleteEvent.cpp  CommandDeleteEvent.h  CommandExportToXml.cpp  CommandExportToXml.h  CommandImportFromXml.cpp  CommandImportFromXml.h  CommandMakeAndActivateEvent.cpp  CommandMakeAndActivateEvent.h  CommandMakeEvent.cpp  CommandMakeEvent.h  CommandModifyEvent.cpp  CommandModifyEvent.h  CommandRelayCommand.cpp  CommandRelayCommand.h  CommandSetAllTasks.cpp  CommandSetAllTasks.h
Charm/HttpClient/: CheckForUpdatesJob.cpp  CheckForUpdatesJob.h  GetProjectCodesJob.cpp  GetProjectCodesJob.h  HttpJob.cpp  HttpJob.h  RestJob.cpp  RestJob.h  UploadTimesheetJob.cpp  UploadTimesheetJob.h
Charm/Idle/: IdleDetector.cpp  IdleDetector.h  MacIdleDetector.h  MacIdleDetector.mm  WindowsIdleDetector.cpp  WindowsIdleDetector.h  X11IdleDetector.cpp  X11IdleDetector.h
Charm/Lotsofcake/: Configuration.cpp  Configuration.h
Charm/Reports/: MonthlyTimesheetXmlWriter.cpp  MonthlyTimesheetXmlWriter.h  TimesheetInfo.cpp  TimesheetInfo.h  TimesheetXmlWriter.cpp  TimesheetXmlWriter.h  WeeklyTimesheetXmlWriter.cpp  WeeklyTimesheetXmlWriter.h
Charm/Widgets/: BillDialog.cpp  BillDialog.h  CharmAboutDialog.cpp  CharmAboutDialog.h  CharmAboutDialog.ui  CharmNewReleaseDialog.cpp  CharmNewReleaseDialog.h  CharmPreferences.cpp  CharmPreferences.h  CharmPreferences.ui  CharmWindow.cpp  CharmWindow.h  CommentEditorPopup.cpp  CommentEditorPopup.h  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationDialog.ui  DateEntrySyncer.cpp  DateEntrySyncer.h  EnterVacationDialog.cpp  EnterVacationDialog.h  EnterVacationDialog.ui  EventEditor.cpp  EventEditor.h  EventEditor.ui  EventEditorDelegate.cpp  EventEditorDelegate.h  EventView.cpp  EventView.h  ExpandStatesHelper.cpp  FindAndReplaceEventsDialog.cpp  FindAndReplaceEventsDialog.h  FindAndReplaceEventsDialog.ui  HttpJobProgressDialog.cpp  HttpJobProgressDialog.h  IdleCorrectionDialog.cpp  IdleCorrectionDialog.h  MakeTemporarilyVisible.h  MonthlyTimesheet.cpp  MonthlyTimesheet.h  (+40 more)
Core/: CMakeLists.txt  CharmCommand.cpp  CharmCommand.h  CharmConstants.cpp  CharmConstants.h  CharmDataModel.cpp  CharmDataModel.h  CharmDataModelAdapterInterface.h  CharmExceptions.cpp  CharmExceptions.h  CommandEmitterInterface.h  Configuration.cpp  Configuration.h  Controller.cpp  Controller.h  Dates.cpp  Dates.h  Event.cpp  Event.h  EventModel.cpp  EventModel.h  EventModelInterface.h  SmartNameCache.cpp  SmartNameCache.h  SqLiteStorage.cpp  SqLiteStorage.h  SqlRaiiTransactor.cpp  SqlRaiiTransactor.h  SqlStorage.cpp  SqlStorage.h  State.cpp  State.h  Task.cpp  Task.h  TaskListMerger.cpp  TaskModel.cpp  TaskModel.h  TaskTreeItem.cpp  TimeSpans.cpp  TimeSpans.h  (+3 more)
Tests/: BackendIntegrationTests.cpp  BackendIntegrationTests.h  CMakeLists.txt  CharmDataModelTests.cpp  CharmDataModelTests.h  ControllerTests.cpp  ControllerTests.h  SqLiteStorageTests.cpp  SqLiteStorageTests.h  SqlTransactionTests.cpp  TaskStructureTests.cpp  TestApplication.cpp  TestHelpers.h  XmlSerializationTests.cpp
cmake/: QtKeychainProject.cmake
cmake/ECM/kde-modules/: KDEFrameworkCompilerSettings.cmake
deploy/: charm.entitlements  fix-rpaths.sh  notarize.sh
scripts/: NullsoftInstaller.nsi  create-win-installer.py
